[add]new stylenanda :new: basic setting
html,scss,css 기본 파일 세팅

--- a/html/s_00_main_page.html
+++ b/html/s_00_main_page.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/common/reset.css">
+  <link rel="stylesheet" href="../css/common/common.css">
+  <link rel="stylesheet" href="../css/src/s_00_main_page.scss">
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="wrap">
+    <header id="headBox"></header>
+    <section id="bestitemBox"></section>
+    <section id="nmbBox"></section>
+    <section id="storeBox"></section>
+    <section id="followUsBox"></section>
+    <footer id="footBox"></footer>
+  </div>
 </body>
 </html>
