--- a/html/s_00_main_page.html
+++ b/html/s_00_main_page.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/s_00_main_page.scss">
+  <link rel="stylesheet" href="../css/src/s_00_main_page.css">
   <title>Document</title>
 </head>
 <body>
