[add]html :new: section 추가

--- a/html/s_00_main_page.html
+++ b/html/s_00_main_page.html
@@ -12,6 +12,7 @@
 <body>
   <div id="wrap">
     <header id="headBox"></header>
+    <section id="newBox"></section>
     <section id="bestitemBox"></section>
     <section id="nmbBox"></section>
     <section id="storeBox"></section>
